impl/examples/errors/type_mismatch.ryu
let flag = 0

match flag {
    case false {
		print("Disabled")
	}
    case true {
		print("Enabled")
	}
}

